[package]
name = "pinocchio-counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.26"
solana-sdk = { version = "1.18.26", features = ["full"] }
solana-client = "1.18.26"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
arrayvec = "0.7"
shellexpand = "3.1"

[dev-dependencies]
solana-program-test = "1.18.26"

[[bin]]
name = "client"
path = "client.rs"
